--- a/style.css
+++ b/style.css
@@ -1,88 +1,185 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap");
 
 * {
-  margin: 0;
-  padding: 0;
-  outline: none;
-  box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
+    margin: 0;
+    padding: 0;
+    outline: none;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
 
-.link-img {
-  background-color: transparent;
-  align-items: center;
-  justify-content: center;
-  display: flex;
-  border-radius: 25%;
+/* -- Navbar -- */
+
+.navbar .nav-item {
+    padding-left: 10px;
 }
 
-.img-responsive {
-  max-height: 130px;
-  max-width: 130px;
+.navbar .nav-item.active {
+    color: #fff;
 }
 
-.nav-item { padding-left: 10px; }
-
-.nav-link:hover {
-  cursor: pointer;
+.navbar .nav-link:hover {
+    cursor: pointer;
 }
 
-@media only screen and (max-device-width: 425px){
-
-  div[class="col-xs-1"]{
-    max-width: 50%;
-  }
-
-  .container img {max-width: 50%;}
-  .container .card-body {height: 110px;}
-  .nav-item {margin-top:12px;}
-
-  .link-img {
-    min-height: 150px;
-    min-width: 150px;
-    margin: 15px;
-  }
-
+.navbar .mobile-dark-mode-switch {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-top: 15px;
+    padding-left: 10px;
 }
 
-@media only screen and (min-device-width: 425px){
+.dark .navbar .mobile-dark-mode-switch {
+    color: rgba(255, 255, 255, 0.75);
+}
 
-  div[class="col-xs-1"]{
-    width: auto;
-  }
+/* -- Panels -- */
 
-  .container .card-body {max-width: 200px !important; height: 100px;}
+.container > .row {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+}
 
-  .link-img {
-    height: 180px;
-    width: 180px;
-    margin: 20px;
-  }
+.container > .row .card {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 0;
+    padding: 30px 0;
+}
+
+.card .img-container {
+    border-radius: 25%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 30px;
+    height: 200px;
+}
+
+.card {
+    transition: 0.2s;
+    position: relative;
+}
+
+.card:hover {
+    background-color: #eee;
+    cursor: pointer;
+    transition: 0.2s;
+}
+
+.card:hover .img-responsive {
+    transform: scale(1.2);
+    transition: 0.2s;
+}
+
+.card .img-responsive {
+    max-height: 130px;
+    max-width: 130px;
+    transition: 0.2s;
+}
+
+.card .card-title {
+    display: inline-block;
+    text-decoration: none;
+    color: #000;
+    font-weight: bold;
+    font-size: 17px;
+    margin-top: 25px;
+}
+
+.card .btn-popover {
+    position: absolute;
+    bottom: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    height: 38px;
+    width: 38px;
+    border-radius: 19px;
+    text-align: center;
+    padding: 0;
+    line-height: 30px;
+    background-color: #ddd;
+    border: none;
+}
+
+.dark .card {
+    background-color: #181a1b;
+    border: 1px solid #333;
+}
+
+.dark .card:hover {
+    background-color: #111;
+}
+
+.dark .card .card-title {
+    color: #fff;
+}
+
+.dark .card .btn-popover {
+    background-color: #333;
+}
+
+.dark .popover, .dark .popover .arrow:after {
+    background-color: #333;
+}
+
+.dark .popover .popover-arrow:after {
+    border-top-color: #333;
+}
+
+.dark .popover .popover-body {
+    color: #fff;
+}
+
+@media (min-width: 1400px) {
+    .container > .row {
+        grid-template-columns: repeat(5, 1fr);
+    }
+}
+
+@media (min-width: 768px) {
+    .container > .row {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+@media (min-width: 1200px) {
+    .container > .row {
+        grid-template-columns: repeat(5, 1fr);
+    }
 }
 
 /** Dark Theme */
 
 .dark {
-  background-color: #181a1b;
+    background-color: #181a1b;
 }
 
-.dark .card {
-  background-color: #181a1b !important;
-  border: 1px solid #333 !important;
+.dark .modal {
+    color: #fff;
 }
 
-.dark .modal, .dark .close {
-  color: #fff;
+.dark .btn-close {
+    filter: invert(1) grayscale(100%) brightness(200%);
 }
 
-.dark .modal-content { 
-  background-color: #181a1b;
+.dark .modal-content {
+    background-color: #181a1b;
 }
 
 .dark .modal-body, .dark .modal-footer, .dark .modal-header {
-  border-top: transparent !important;
-  border-bottom: transparent !important; 
+    border-top: transparent !important;
+    border-bottom: transparent !important;
 }
 
-.dark .modal-footer{ border-top: 1px solid #333 !important; }
-.dark .modal-header{ border-bottom: 1px solid #333 !important; }
+.dark .modal-footer {
+    border-top: 1px solid #333 !important;
+}
+
+.dark .modal-header {
+    border-bottom: 1px solid #333 !important;
+}
